--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Rishabh Roy",
   "license": "UNLICENSED",
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   }
 }
