--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "serialport": "^12.0.0"
   }
 }
