--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pcm": "^1.0.3",
-    "serialport": "^12.0.0"
+    "serialport": "^12.0.0",
+    "ws": "^8.14.2"
   }
 }
