--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "__hash_table": "cpp"
+        "__hash_table": "cpp",
+        "__bit_reference": "cpp",
+        "ios": "cpp"
     }
 }
